crates/pg_syntax/tests/snapshots/postgres_regress/json@265.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ca FROM json_populate_record(NULL::jsrec, '{\"ca\": [\"aaaaaaaaaaaaaaaa\"]}') q;"
---
SelectStmt@0..83
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "ca"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeFunction@15..82
    List@15..79
      FuncCall@15..79
        Ident@15..35 "json_populate_record"
        Ascii40@35..36 "("
        TypeCast@36..47
          AConst@36..40
            NullP@36..40 "NULL"
          Typecast@40..42 "::"
          TypeName@42..47
            Ident@42..47 "jsrec"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..79
          Sconst@49..79 "'{\"ca\": [\"aaaaaaaaaaa ..."
    Ascii41@79..80 ")"
    Whitespace@80..81 " "
    Alias@81..82
      Ident@81..82 "q"
  Ascii59@82..83 ";"

