crates/pg_syntax/tests/snapshots/postgres_regress/json@266.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ca FROM json_populate_record(NULL::jsrec, '{\"ca\": [[1, 2, 3], {\"k\": \"v\"}]}') q;"
---
SelectStmt@0..86
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "ca"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeFunction@15..85
    List@15..82
      FuncCall@15..82
        Ident@15..35 "json_populate_record"
        Ascii40@35..36 "("
        TypeCast@36..47
          AConst@36..40
            NullP@36..40 "NULL"
          Typecast@40..42 "::"
          TypeName@42..47
            Ident@42..47 "jsrec"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..82
          Sconst@49..82 "'{\"ca\": [[1, 2, 3], { ..."
    Ascii41@82..83 ")"
    Whitespace@83..84 " "
    Alias@84..85
      Ident@84..85 "q"
  Ascii59@85..86 ";"

