crates/pg_syntax/tests/snapshots/postgres_regress/json@271.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT js FROM json_populate_record(NULL::jsrec, '{\"js\": \"abc\"}') q;"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "js"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeFunction@15..67
    List@15..64
      FuncCall@15..64
        Ident@15..35 "json_populate_record"
        Ascii40@35..36 "("
        TypeCast@36..47
          AConst@36..40
            NullP@36..40 "NULL"
          Typecast@40..42 "::"
          TypeName@42..47
            Ident@42..47 "jsrec"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..64
          Sconst@49..64 "'{\"js\": \"abc\"}'"
    Ascii41@64..65 ")"
    Whitespace@65..66 " "
    Alias@66..67
      Ident@66..67 "q"
  Ascii59@67..68 ";"

