crates/pg_syntax/tests/snapshots/postgres_regress/json@272.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT js FROM json_populate_record(NULL::jsrec, '{\"js\": [123, \"123\", null, {\"key\": \"value\"}]}') q;"
---
SelectStmt@0..99
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "js"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeFunction@15..98
    List@15..95
      FuncCall@15..95
        Ident@15..35 "json_populate_record"
        Ascii40@35..36 "("
        TypeCast@36..47
          AConst@36..40
            NullP@36..40 "NULL"
          Typecast@40..42 "::"
          TypeName@42..47
            Ident@42..47 "jsrec"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..95
          Sconst@49..95 "'{\"js\": [123, \"123\",  ..."
    Ascii41@95..96 ")"
    Whitespace@96..97 " "
    Alias@97..98
      Ident@97..98 "q"
  Ascii59@98..99 ";"

